# cuda-learn

./: 01_hello_world.cu  02_check_dimension.cu  03_grid_block.cu  04_sum_arrays.cu  05_vector_add.cu  06_thread_index.cu  07_sum_matrix.cu  08_device_information.cu  09_warp_divergence.cu  10_sum_matrix2D.cu  CMakeLists.txt  freshman.h  profile.sh  test.cpp
